# RAG-Visualizer

./: .geminirules  .gitignore  Dockerfile  README.md  deploy_to_hf.ps1  dev.bat  eval.py  pyproject.toml  rag_test_corpus.md
backend/: __init__.py  constants.py  main.py  rate_limiter.py  utils.py
backend/engines/: BM25Enginer.py  __init__.py  bm25_engine.py  chunking.py  embedding.py  llm_client.py  re_ranker_engine.py  reducer.py
backend/models/: __init__.py  schemas.py
backend/routers/: chunk_router.py  retrieval_router.py
backend/storage/: vector_store.py
frontend/: app.js  index.html  styles.css
